--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jade": "~1.11.0",
     "mongoose": "^4.1.11",
     "morgan": "^1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "stylus": "^0.52.4"
   },
   "devDependencies": {
