--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular": "~1.4.7",
     "angular-resource": "~1.4.7",
     "angular-route": "~1.4.7",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-mocks": "~1.4.7"
   }
 }
